assets/less/base/ui/box.less
// Box
//
// The Box builds the foundation for most of the views.
//
// Markup:
// <div class="box">
// 	<header><span class="title">Title</span><span class="links"><a href="#">Link #1</a><a href="#">Link #2</a><a href="#">Link #3</a></span></header>
// 	<section>
//		<header><span class="title">First Section Header</span></header>
//		<p>Lorem Ipsum</p>
//		<header><span class="title">Second Section Header</span></header>
//		<p>Dolor sit amet</p>
//	</section>	
// </div>
//
// Styleguide 2.1
.box {
	.border-radius(5px);
	background-color: @btnBackgroundHighlight;
	border: 1px solid @btnBorder;
	border-bottom: 1px solid #000;
	border-bottom-color: darken(@btnBorder, 10%);
	.box-fix;
	header {
		height: 20px;
		//margin-top: -30px;
		.gradient(darken(@btnBackground, 2%), @btnBackgroundHighlight);
		border: none;
		border-bottom: 1px solid @btnBorder;
		.border-radiuses(5px, 0px, 0px, 5px);
		padding: 5px 0;
		.edit {
			float: right;
			color: #b2b2b2;
			&:hover {
				color: lighten(#b2b2b2,10%);
			}
		}
		.title {
			float: left;
			margin: 0 1%;
		}
		.links {
			float: right;
			margin: 0 1%;
			 a {
				 color: #666;
			 }
		}
		@media only screen 
		and (min-width : 319px) 
		and (max-width : 767px) {
			margin-top: -30px;
		}	
	}
	section {
		padding: 5px 0;
		.border-radiuses(0, 5px, 5px, 0);
		.clear-fix;
		header {
			margin-top: -5px !important;
			background-color: @btnBackgroundHighlight;
			border-top: 1px solid @btnBorder;
			.border-radius(0px);
			padding: 5px 0px;
			&:before, :after {
				content: "";
				margin-left: 5px;
			}
		}
		h1,h2,h3,h4,h5,h6 {
			margin-left: 0.5%;
		}
	}
}

